--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ autopep8 @ file:///tmp/build/80754af9/autopep8_1596578164842/work
 Babel==2.8.0
 backcall==0.2.0
 bcrypt @ file:///C:/ci/bcrypt_1597936263757/work
+beautifulsoup4==4.9.2
 bleach @ file:///tmp/build/80754af9/bleach_1600439572647/work
 brotlipy==0.7.0
+bs4==0.0.1
 certifi==2020.6.20
 cffi @ file:///C:/ci/cffi_1598352710791/work
 chardet==3.0.4
@@ -24,6 +26,8 @@ flake8 @ file:///home/conda/feedstock_root/build_artifacts/flake8_1594584774608/
 flake8-polyfill==1.0.2
 flake8-quotes @ file:///home/conda/feedstock_root/build_artifacts/flake8-quotes_1589330264223/work
 future==0.18.2
+html5==0.0.9
+html5lib==1.1
 idna @ file:///tmp/build/80754af9/idna_1593446292537/work
 imagesize==1.2.0
 importlib-metadata @ file:///D:/bld/importlib-metadata_1593211580034/work
@@ -40,6 +44,7 @@ jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1594826976318/work
 jupyter-core==4.6.3
 keyring @ file:///C:/ci/keyring_1598884979533/work
 lazy-object-proxy==1.4.3
+lxml @ file:///C:/ci/lxml_1594822774489/work
 MarkupSafe==1.1.1
 mccabe==0.6.1
 mistune==0.8.4
@@ -53,6 +58,8 @@ numpy @ file:///C:/ci/numpy_and_numpy_base_1596215850360/work
 numpydoc @ file:///tmp/build/80754af9/numpydoc_1594166760263/work
 olefile==0.46
 packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1589925210001/work
+pandas @ file:///C:/ci/pandas_1601558512044/work
+pandas-datareader @ file:///tmp/build/80754af9/pandas-datareader_1595379313840/work
 pandocfilters==1.4.2
 paramiko @ file:///tmp/build/80754af9/paramiko_1598886428689/work
 parso==0.7.0
@@ -93,10 +100,12 @@ QtPy==1.9.0
 requests @ file:///tmp/build/80754af9/requests_1592841827918/work
 rope==0.17.0
 Rtree==0.9.4
+selenium==3.141.0
 sip==4.19.13
 six==1.15.0
 snowballstemmer==2.0.0
 sortedcontainers==2.2.2
+soupsieve==2.0.1
 Sphinx @ file:///tmp/build/80754af9/sphinx_1597428793432/work
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
